# BioAgentics

./: .gitignore  .mcp.json  AGENT_COMMS.md  PLAN-arid1a-pancancer-sl-atlas.md  PLAN-nsclc-depmap-targets.md  PLAN-pancancer-mtap-prmt5-atlas.md  PLAN-pik3ca-allele-dependencies.md  README.md  SUMMARY_FORMAT.md  agents.toml  pyproject.toml
.githooks/: pre-commit
cache/: ANALYST.cancer.arid1a-pancancer-sl-atlas.summary  ANALYST.cancer.breast-cancer-vulnerability-stratification.summary  ANALYST.cancer.cdkn2a-pancancer-dependency-atlas.summary  ANALYST.cancer.crc-kras-dependencies.summary  ANALYST.cancer.mtap-prmt5-nsclc-sl.summary  ANALYST.cancer.nf1-loss-pancancer-dependency-atlas.summary  ANALYST.cancer.nsclc-depmap-targets.summary  ANALYST.cancer.pancancer-ferroptosis-atlas.summary  ANALYST.cancer.pancancer-mtap-prmt5-atlas.summary  ANALYST.cancer.pik3ca-allele-dependencies.summary  ANALYST.cancer.pten-loss-pancancer-dependency-atlas.summary  ANALYST.cancer.rb1-loss-pancancer-dependency-atlas.summary  ANALYST.cancer.swisnf-metabolic-convergence.summary  ANALYST.cancer.tp53-hotspot-allele-dependencies.summary  ANALYST.cancer.wrn-msi-pancancer-atlas.summary  ANALYST.crohns.anti-tnf-response-prediction.summary  ANALYST.crohns.il23-single-cell-response-atlas.summary  ANALYST.crohns.microbiome-metabolome-subtyping.summary  ANALYST.crohns.nod2-variant-functional-impact.summary  ANALYST.diagnostics.crc-liquid-biopsy-panel.summary  ANALYST.diagnostics.cxr-rare-disease-detection.summary  ANALYST.diagnostics.false-positive-biomarker-mining.summary  ANALYST.diagnostics.pathology-fm-msi-prescreening.summary  ANALYST.diagnostics.rare-disease-phenotype-matcher.summary  ANALYST.diagnostics.smartphone-retinal-dr-screening.summary  ANALYST.diagnostics.voice-biomarkers-parkinsons.summary  ANALYST.pandas_pans.autoantibody-target-network-mapping.summary  ANALYST.pandas_pans.cytokine-network-flare-prediction.summary  ANALYST.pandas_pans.gas-molecular-mimicry-mapping.summary  ANALYST.pandas_pans.pans-genetic-variant-pathway-analysis.summary  ANALYST.pandas_pans.transcriptomic-biomarker-panel.summary  ANALYST.tourettes.ts-neuroimmune-subtyping.summary  ANALYST.tourettes.ts-striatal-interneuron-pathology.summary  DATA_CURATOR.cancer.summary  DATA_CURATOR.crohns.summary  DATA_CURATOR.diagnostics.summary  DATA_CURATOR.pandas_pans.summary  DATA_CURATOR.tourettes.summary  DEVELOPER.cancer.arid1a-pancancer-sl-atlas.summary  DEVELOPER.cancer.brca-pancancer-sl-atlas.summary  (+163 more)
org-roles/: ANALYST.md  DEVELOPER.md  RESEARCH_DIRECTOR.md  RESEARCH_WRITER.md
org-roles/cancer/: ANALYST.md  DATA_CURATOR.md  DEVELOPER.md  HUMAN.md  LITERATURE_REVIEWER.md  PROJECT_MANAGER.md  RESEARCH_CATALYST.md  RESEARCH_DIRECTOR.md  RESEARCH_WRITER.md  SYSTEMS_ENGINEER.md  VALIDATION_SCIENTIST.md
org-roles/crohns/: ANALYST.md  (+9 more)
tests/: test_acharjee_stricture_signature.py  test_ahba_spatial.py  test_autoantibody_seeds.py  test_baselines.py  test_batch_correction.py  test_biomarker_classifier.py  test_biomarker_figures.py  test_biomarker_validation.py  test_brainspan_trajectories.py  test_bulk_signature.py  test_candidate_prioritization.py  test_causal_gene_prioritization.py  test_celltype_enrichment.py  test_celltype_signature.py  test_cepo_cauchy.py  test_circuit_vulnerability.py  test_classifier.py  test_clinical_utility.py  test_cmap_pipeline.py  test_compartment_scoring.py  test_crohns_baseline_integration.py  test_crohns_cmtf.py  test_crohns_differential.py  test_crohns_mofa2.py  test_crohns_subtype_characterization.py  test_crohns_subtyping.py  test_cross_disorder.py  test_cthrc1_yaptaz_signature.py  test_cxr_convnext.py  test_cxr_losses.py  test_cxr_zero_shot.py  test_cytokine_axis_classifier.py  test_cytokine_extraction.py  test_cytokine_flare_predictor.py  test_cytokine_meta_analysis.py  test_cytokine_network.py  test_cytokine_pipeline.py  test_cytokine_treatment_response.py  test_dbs_tracts.py  test_dependency_model.py  (+150 more)
(+1348 files in other folders)
