[project]
name = "bioagentics"
version = "0.1.0"
description = "Multi-agent system for cancer research and drug discovery"
readme = "README.md"
authors = [
    { name = "Matth", email = "matth@mtingers.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anndata>=0.12.6",
    "fastapi>=0.135.1",
    "harmonypy>=0.2.0",
    "lifelines>=0.30.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scanpy>=1.12",
    "scrublet>=0.2.3",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
agents = [
    "geoparse>=2.0.4",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "mcp>=1.26.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
]
