[project]
name = "bioagentics"
version = "0.1.0"
description = "Multi-agent system for cancer research and drug discovery"
readme = "README.md"
authors = [
    { name = "Matth", email = "matth@mtingers.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anndata>=0.12.6",
    "biopython>=1.86",
    "combat>=0.3.3",
    "fastapi>=0.135.1",
    "gseapy>=1.1.12",
    "harmonypy>=0.2.0",
    "leidenalg>=0.11.0",
    "lifelines>=0.30.0",
    "mofapy2>=0.7.3",
    "networkx>=3.6.1",
    "pillow>=12.1.1",
    "pyarrow>=23.0.1",
    "pydeseq2>=0.5.4",
    "python-louvain>=0.16",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scanpy>=1.12",
    "scrublet>=0.2.3",
    "shap>=0.51.0",
    "sqlalchemy>=2.0.48",
    "tensorly>=0.9.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "uvicorn>=0.42.0",
    "xgboost>=3.2.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
agents = [
    "geoparse>=2.0.4",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "mcp>=1.26.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
]
