[project]
name = "bioagentics"
version = "0.1.0"
description = "Multi-agent system for biomedical research"
readme = "README.md"
authors = [
    { name = "Matth", email = "matth@mtingers.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.135.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
research = [
    "albumentations>=2.0.8",
    "anndata>=0.12.6",
    "biopython>=1.86",
    "combat>=0.3.3",
    "geoparse>=2.0.4",
    "gseapy>=1.1.12",
    "harmonypy>=0.2.0",
    "joblib>=1.5.3",
    "leidenalg>=0.11.0",
    "lifelines>=0.30.0",
    "matplotlib>=3.10.8",
    "mcp>=1.26.0",
    "mofapy2>=0.7.3",
    "networkx>=3.6.1",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.4",
    "onnxscript>=0.6.2",
    "opencv-python-headless>=4.13.0.92",
    "openslide-python>=1.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pyarrow>=23.0.1",
    "pydeseq2>=0.5.4",
    "python-louvain>=0.16",
    "scanpy>=1.12",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "scrublet>=0.2.3",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "statsmodels>=0.14.6",
    "tensorly>=0.9.0",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
    "decoupler>=2.1.4",
    "abagen>=0.1.3",
    "setuptools>=82.0.1",
    "lightgbm>=4.6.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "praat-parselmouth>=0.4.7",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
